feat: impl docgen